--- a/css/styles.css
+++ b/css/styles.css
@@ -6,5 +6,8 @@
   text-align:center;
 }
 .header{
-	margin:20px 15px 0px;
+	margin:20px 10px 0px;
+}
+body{
+  background-image:url("images/pwc-ghana.jpg");
 }
